# PixelFlow-EKCHOUS

./: .gitignore  CMakeLists.txt  README.md  SESSION_LOG.md  build.bat  build.gradle.kts  build.sh  configure.bat  configure.sh  settings.gradle.kts
assets/elements/: element_table.json
cmake/: deps.cmake
docs/: architecture.md  data-layout.md  determinism.md  gpu-pipeline.md  open-questions.md  pixelflow-reference-mapping.md  streaming.md
engine/: README.md  main.cpp
engine/core/: Logger.cpp  Logger.h  Types.h
engine/determinism/: BannedOpsLint.cpp  FixedPoint.h  GoldenHash.cpp  GoldenHash.h  SeededRng.cpp  SeededRng.h
engine/engine/: Engine.cpp  Engine.h
engine/gpu/: Buffer.cpp  Buffer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
engine/sim/atoms/: AtomBond.h  AtomElement.h  AtomField.h  ParticleTemplate.h
engine/sim/grid/: Chunk.cpp  Chunk.h
engine/sim/passes/: FallingSandDemo.cpp  FallingSandDemo.h  StubPasses.cpp
engine/sim/softbody/: AABB.h  BoundingDisk.h  CollisionGrid.cpp  CollisionGrid.h  Filters.h  FlowField.h  FlowParticles.h  Fluid2D.cpp  Fluid2D.h  ForceGenerators.h  Obstacles.h  Particle.h  Physics.cpp  Physics.h  PoissonBlob.h  PoissonDiscSampling.h  SceneIO.h  SoftBall.h  SoftDisc.h  SoftGrid.h  SoftHexGrid.h  SoftRope.h  SoftStar.h  Spring.h  Streamlines.h
engine/sphere/: CubedSphere.cpp  CubedSphere.h  FaceAdjacencyGen.cpp
gradle/: libs.versions.toml
modules/engine-runtime/: build.gradle.kts
modules/engine-runtime/src/main/java/studio/engine/: ClasspathResourceLoader.java  GLTextureTarget.java  RenderTarget.java  Smoke.java
modules/pixelflow-core/: build.gradle.kts
modules/pixelflow-core/src/main/java/com/thomasdiewald/pixelflow/java/: DwPixelFlow.java
modules/pixelflow-core/src/main/java/com/thomasdiewald/pixelflow/java/antialiasing/FXAA/: FXAA.java
modules/pixelflow-core/src/main/java/com/thomasdiewald/pixelflow/java/antialiasing/GBAA/: GBAA.java
modules/pixelflow-core/src/main/java/com/thomasdiewald/pixelflow/java/antialiasing/SMAA/: SMAA.java
modules/pixelflow-core/src/main/java/com/thomasdiewald/pixelflow/java/dwgl/: DwGLError.java  DwGLFrameBuffer.java
modules/pixelflow-core/src/main/java/com/thomasdiewald/pixelflow/java/flowfieldparticles/: DwFlowFieldParticles.java  sketch.properties
modules/pixelflow-core/src/main/java/com/thomasdiewald/pixelflow/java/fluid/: DwFluid2D.java  DwFluidParticleSystem2D.java  DwFluidStreamLines2D.java
modules/pixelflow-core/src/main/java/com/thomasdiewald/pixelflow/java/imageprocessing/: DwBackgroundSubtraction.java  DwFlowField.java  DwHarrisCorner.java  DwOpticalFlow.java  DwShadertoy.java
modules/pixelflow-core/src/main/java/com/thomasdiewald/pixelflow/java/imageprocessing/filter/: BilateralFilter.java  BinomialBlur.java  Bloom.java  BoxBlur.java  Clamp.java  Convolution.java  Copy.java  DepthOfField.java  Difference.java  DistanceTransform.java  DoG.java  DwFilter.java  DwLiquidFX.java  Gamma.java  GaussianBlur.java  GaussianBlurPyramid.java  Laplace.java  (+11 more)
modules/pixelflow-core/src/main/java/com/thomasdiewald/pixelflow/java/utils/: DwCoordinateTransform.java  DwUtils.java
modules/pixelflow-core/src/main/java/processing/core/: PApplet.java  PConstants.java  PGraphics.java  PImage.java  PMatrix.java  PMatrix2D.java  PMatrix3D.java  PShape.java  PVector.java
modules/pixelflow-core/src/main/java/processing/opengl/: FrameBuffer.java  PGL.java  PGraphics2D.java  PGraphics3D.java  PGraphicsOpenGL.java  PJOGL.java  PShader.java  Texture.java
modules/pixelflow-core/src/main/java/studio/engine/: ResourceLoader.java
modules/studio-app/: build.gradle.kts
modules/studio-app/src/main/java/studio/engine/: TextureCapture.java
modules/studio-app/src/main/java/studio/graph/: AbstractNode.java  Edge.java  Frame.java  Graph.java  GraphContext.java  GraphErrors.java  GraphRuntime.java  InputPort.java  MouseState.java  Node.java  NodeFactoryRegistry.java  NodeId.java  OutputPort.java  Parameter.java  PortType.java  PortTypes.java  TopologicalSort.java  UndoStack.java
modules/studio-app/src/main/java/studio/headless/: HeadlessSmoke.java
modules/studio-app/src/main/java/studio/nodes/aa/: FxaaNode.java  SmaaNode.java
modules/studio-app/src/main/java/studio/nodes/builtin/: GraphInputNode.java  GraphOutputNode.java  GroupBoxNode.java  NoteNode.java
modules/studio-app/src/main/java/studio/nodes/compound/: CompoundNode.java
modules/studio-app/src/main/java/studio/nodes/filter/: BilateralFilterNode.java  BinomialBlurNode.java  BloomNode.java  BoxBlurNode.java  ClampNode.java  DifferenceNode.java  DistanceTransformNode.java  GammaNode.java  GaussianBlurNode.java  LaplaceNode.java  LevelsNode.java  LiquidFxNode.java  LuminanceNode.java  LuminanceThresholdNode.java  MedianNode.java  MultiplyNode.java  SobelNode.java
modules/studio-app/src/main/java/studio/nodes/flowfield/: FlowFieldNode.java  FlowFieldParticlesNode.java
modules/studio-app/src/main/java/studio/nodes/fluid/: FluidNode.java
modules/studio-app/src/main/java/studio/nodes/image/: HarrisCornerNode.java  OpticalFlowNode.java
modules/studio-app/src/main/java/studio/nodes/input/: MouseNode.java
modules/studio-app/src/main/java/studio/save/: Exposure.java  JsonCodec.java  ParamCoercion.java  PflowJson.java  PflowReader.java  PflowWriter.java  PftoolJson.java  PftoolReader.java  PftoolWriter.java  ToolsLibrary.java
modules/studio-app/src/main/java/studio/ui/: AppDataInstaller.java  DefaultScene.java  GLPreviewPanel.java  MainFrame.java  NodeEditorPanel.java  ParamEditTracker.java  ParameterPanel.java  PreviewToolbar.java  QuickAddOverlay.java  RecentProjects.java  SaveAsToolDialog.java  StatusBar.java  StudioApp.java  StudioModel.java  ToolPalette.java
shaders/glsl/render/: grid_quad.frag  grid_quad.vert
shaders/glsl/sim/: collision_resolve.comp  in_flux_integrate.comp  proposal_sort.comp
starters/: compound-demo.pflow  fluid-bloom.pflow  fluid-edges.pflow  fluid-flow-lines.pflow  optical-flow.pflow
tests/: CMakeLists.txt  determinism_replay_test.cpp  sphere_seam_test.cpp
tools/: sample-soft-edges.pftool
(+2 files in other folders)
